[gd_scene load_steps=3 format=3 uid="uid://b7x0sb6g12gc5"]

[ext_resource type="Script" path="res://scripts/ui/SharedWordCard.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.2, 0.3, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="SharedWordCard" type="Panel"]
custom_minimum_size = Vector2(120, 80)
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0

[node name="WordLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "WORD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypeLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Shared"
horizontal_alignment = 1
modulate = Color(0.7, 0.7, 0.7, 1)

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
flat = true